main.tf
//Security group creation and whitelisting the ip
resource "aws_security_group" "allow_tls" {
  name = "terraform-sg"

  ingress {
 description = "HTTPS traffic"
 from_port = 443
 to_port = 443
 protocol = "tcp"
 cidr_blocks = ["0.0.0.0/0"]
 }
ingress {
 description = "HTTP traffic"
 from_port = 0
 to_port = 65000
 protocol = "tcp"
 cidr_blocks = ["0.0.0.0/0"]
 }
 ingress {
 description = "SSH port"
 from_port = 22
 to_port = 22
 protocol = "tcp"
 cidr_blocks = ["0.0.0.0/0"]
 }
 egress {
 from_port = 0
 to_port = 0
 protocol = "-1"
 cidr_blocks = ["0.0.0.0/0"]
 ipv6_cidr_blocks = ["::/0"]
 }
}
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.0"
    }
  }
}

provider "aws" {
  region     = "us-east-2"
}
resource "aws_instance" "myins" {
  ami                    = "ami-024e6efaf93d85776"
  instance_type          = "t2.micro"
  availability_zone = "us-east-2a"
  vpc_security_group_ids = [aws_security_group.allow_tls.id]
  key_name = "insurance_ohio"
  tags = {
    Name = "test-server"
  }

  provisioner "local-exec" {
    command = "echo ${aws_instance.myins.public_ip} > /etc/ansible/hosts"
  }
}
resource "aws_key_pair" "deployer" {
  key_name   = "deployer-key"
  public_key = "ssh-rsa MIIEpAIBAAKCAQEAmcOhKoKFgIDJYaXkdwr3pvg0ePbB4rjsiivRIQmolgXAbQSsCwysa6bx1Je/BcIuf98SIDypSnZ6Q5z1lI0VyE+YIiFKf0nJbPk+Ao4wXrsF+K0Edwyfhob1AKXc/DkH+aKKr6lGOjCZWn0qoWMkzG+mNYigjKagM5Gn6TuAZH1GhD73gqdv3PQZVefAxwgplbLby7JGWhLGOtyMPTf3CVWkXDXw3OONfP/xkKpOncrHfR4TRG+p6YBR895HX+zWa3HXzCL0/uNTcf6GiDVP9PTB1NpSHKHiq0yPfAYIYs1R6q+trZIx0YGWA6d0+zx+8476gTXkDpZU+YFzbwvtMQIDAQABAoIBAQCAGLa6GFQpkqCx5abn+U4JXnswTrmFLHN6RDiLomU83fvJlnvRFLTLVh/e8K/llzhvtKGAE6kg7IS8sRTxtXtxDcX6oOtUEV9pllYvgM8R [...]
}
